--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
     "name": "Baby Feed",
     "icon": "./resources/icon.png",
-    "version": "1.0.0",
-    "description": "Baby feed management app",
+    "version": "1.0.2",
+    "description": "Baby feed tracker",
     "sdkVersion": "27.0.0"
   },
   "android": {
