--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-datepicker": "^1.7.2",
+    "react-native-svg-charts": "^5.2.0",
     "react-navigation": "^2.11.2"
   }
 }
